<resources>
    <string name="app_name">MyGril_Originality</string>
    <string name="app_create">chenjy_studio(佳勇工作室)</string>
    <string name="app_create_time">2016.3.1</string>
    <string name="app_version">version 1.0</string>

    <!-- HomeActivity -->
    <string name="retry_exit">再按一次退出程序</string>

    <!-- GuidePageActivity -->
    <string name="enter_app">进入APP</string>

    <!-- LoginActivity -->
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_submit">登录</string>
    <string name="login_forget_psw">忘记密码?</string>
    <string name="login_register">注册</string>
    <string name="login_account_hint">数字+字母组成 6-12位</string>
    <string name="login_password_hint">数字+字母 首个字母为大写 6-12位</string>

    <!-- RegisterActivity -->
    <string name="account">账号</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="hobby">爱好</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="reconfirm_psw">重复密码</string>
    <string name="register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- PersonalFragment-->
    <string name="label">标签</string>
    <string name="ideal_home">理想居所</string>
    <string name="my_plan">我的计划</string>
    <string name="switch_account">切换账号</string>
    <string name="setting">设置</string>

    <!-- AboutFragment -->
    <string name="about_description1">专属于您的APP  一路走过的旅程 我们为您记录</string>

    <!-- MusicFragment -->
    <string name="music_name">歌名</string>
    <string name="music_particular_year">年份</string>
    <string name="music_singer">歌手</string>
    <string name="music_area">区域</string>
    <string name="music_size">大小</string>

    <!-- VideoPlayerActivity -->
    <string name="last_one">上一曲</string>
    <string name="next_one">下一曲</string>
    <string name="start_player">开始播放</string>
    <string name="pause_player">暂停播放</string>
    <string name="stop_player">停止播放</string>
    <string name="backward">后进</string>
    <string name="forward">前进</string>
    <string name="full_screen">全屏</string>
    <string name="inside_screen">自适应</string>
    <string name="landscape_screen">横屏</string>
    <string name="portrait_screen">竖屏</string>
</resources>
