<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/last_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:background="@drawable/background_comment_button"
            android:text="@string/last_one"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_weight="1"
            android:enabled="false"
            android:background="@drawable/background_comment_button"
            android:text="@string/start_player"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <Button
            android:id="@+id/next_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_comment_button"
            android:text="@string/next_one"
            android:enabled="false"
            android:textColor="@color/white"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <SeekBar
            android:id="@+id/id_seekbar"
            style="@style/my_seekbar_self"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="0" />

        <Button
            android:id="@+id/screen_full_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_comment_button_pressed"
            android:text="@string/inside_screen"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/screen_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/selector_comment_button_pressed"
            android:text="@string/landscape_screen"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>