<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/account"
            android:textColor="@color/blue"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/id_register_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/password"
            android:textColor="@color/blue"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/id_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/reconfirm_psw"
            android:textColor="@color/blue"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/id_register_reconfirm_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue" />


</LinearLayout>